# neural_network

./: CMakeLists.txt  README.md  main.cpp
cifar/: cifar.cpp  cifar.h
data/: DataSet.cpp  DataSet.h
legacy/cifar/: cifar.cpp  cifar.h
legacy/cuda/: CUDAHelper.cpp  CUDAHelper.h  CUDATools.cu  CUDATools.cuh
legacy/data/: DataSet.h
legacy/math/: Activator.cpp  Activator.h  Matrix.cpp  Matrix.h  mtype.h
legacy/mnist/: mnist.h
legacy/nn/: NeuralNetwork.cpp.bak  NeuralNetwork.h.bak
legacy/nn/ffw/: FeedForwardNN.cpp  FeedForwardNN.h
legacy/nn/ffw/layer/: BatchNormLayer.h  ConvLayer.cpp  ConvLayer.h  FullyConnLayer.cpp  FullyConnLayer.h  PoolingLayer.cpp  PoolingLayer.h
legacy/nn/ffw/optimizer/: AbsOptimizer.cpp  AdaMaxOptimizer.h  SimpleSGDOptimizer.cpp  SimpleSGDOptimizer.h
math/: Activator.cpp  Activator.h  Matrix.cpp  Matrix.h  mtype.h  permutation.cpp  permutation.h
mnist/: mnist.cpp  mnist.h
nn/: NeuralNetwork.cpp  NeuralNetwork.cpp.bak  NeuralNetwork.h
nn/ffw/: FeedForwardNN.cpp  FeedForwardNN.h
nn/ffw/layer/: AbsLayer.cpp  AbsLayer.h  BatchNormLayer.cpp  ConvLayer.cpp  ConvLayer.h  FullyConnLayer.cpp  FullyConnLayer.h  PoolingLayer.cpp  PoolingLayer.h
nn/ffw/optimizer/: AbsOptimizer.h  AdaMaxOptimizer.cpp  AdamOptimizer.cpp  AdamOptimizer.h
openblas/: openblas_config.h
v3/data/base/: Data2Bmp.cpp  Data2Bmp.h  DataSetBase.cpp  DataSetBase.h
v3/data/cifar10/: CIFAR10DataSet.cpp  CIFAR10DataSet.h
v3/data/mnist/: MNISTDataSet.cpp  MNISTDataSet.h
v3/def/: CUDAEnvironment.h  type.h
v3/interface/: interface.cpp  interface.cu  interface.h
v3/nn/: AutoEncoder.cpp  AutoEncoder.h  NeuralNetwork.cpp  NeuralNetwork.h
v3/nn/layer/: BatchNormLayer.cpp  BatchNormLayer.h  ConvLayer.cpp  ConvLayer.h  DropoutLayer.cpp  DropoutLayer.h  LinearLayer.cpp  LinearLayer.h  MaxPoolingLayer.cpp  MaxPoolingLayer.h  MeanPoolingLayer.cpp  MeanPoolingLayer.h  ResidualBlock.cpp  ResidualBlock.h
v3/nn/layer/activation/: DropoutLayer.cpp  DropoutLayer.h  LReLULayer.cpp  LReLULayer.h  ReLULayer.cpp  ReLULayer.h  SigmoidOutputLayer.cpp  SigmoidOutputLayer.h  SoftMaxOutputLayer.cpp  SoftMaxOutputLayer.h
v3/nn/layer/base/: LayerBase.cpp  LayerBase.h
v3/nn/optimizer/: AdaMaxOptimizer.cpp  AdaMaxOptimizer.h  AdamOptimizer.cpp  AdamOptimizer.h  SGDOptimizer.cpp  SGDOptimizer.h
v3/nn/optimizer/base/: OptimizerBase.cpp  OptimizerBase.h
v3/utils/: UniquePointerExt.h  debug.cpp  debug.h  permutation.cpp  permutation.h
